docker/kubernetes-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: nginx-deployment
  namespace: nginx-ns
  labels:
    app: nginx-app

spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-app

  template:
    metadata:
      name: nginx-pod
      namespace: nginx-ns
      labels:
        app: nginx-app

    spec:
      containers:
      - name: nginx-con
        image: nginx:latest
        ports: 
        - containerPort: 80
