docker/kubernetes-app/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: nginx-svc
  namespace: nginx-ns

spec:
  selector:
    app: nginx-app
  ports: 
    - protocol: TCP
      port: 80
      targetPort: 80

  # type: NodePort
