docker/kubernetes-app/all.yaml
kind: Namespace
apiVersion: v1

metadata:
  name: osa-ns

---

apiVersion: apps/v1
kind: Deployment

metadata:
  name: osa-deployment
  namespace: osa-ns
  labels:
    app: osa-app

spec:
  replicas: 2
  selector:
    matchLabels:
      app: osa-app

  template:
    metadata:
      name: osa-pod
      namespace: osa-ns
      labels:
        app: osa-app

    spec:
      containers:
      - name: osa-con
        image: trainwithshubham/online_shop_app:latest
        ports: 
        - containerPort: 5173

---

apiVersion: v1
kind: Service

metadata:
  name: osa-svc
  namespace: osa-ns

spec:
  selector:
    app: osa-app
  ports: 
    - protocol: TCP
      port: 5173
      targetPort: 5173

---

apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: osa-ing
  namespace: osa-ns
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  rules:
  # - host: app2.localhost
  - http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: osa-svc
            port:
              number: 5173

---

kind: Namespace
apiVersion: v1

metadata:
  name: nginx-ns

---

apiVersion: apps/v1
kind: Deployment

metadata:
  name: nginx-deployment
  namespace: nginx-ns
  labels:
    app: nginx-app

spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-app

  template:
    metadata:
      name: nginx-pod
      namespace: nginx-ns
      labels:
        app: nginx-app

    spec:
      containers:
      - name: nginx-con
        image: nginx:latest
        ports: 
        - containerPort: 80

---

apiVersion: v1
kind: Service

metadata:
  name: nginx-svc
  namespace: nginx-ns

spec:
  selector:
    app: nginx-app
  ports: 
    - protocol: TCP
      port: 80
      targetPort: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: nginx-ing
  namespace: nginx-ns
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  rules:
  # - host: app1.localhost
  - http:
      paths:
      - pathType: Prefix
        path: /app2
        backend:
          service:
            name: nginx-svc
            port:
              number: 80
